# StartForTelegramBot

./: .env  .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt
config/: routers.py  settings.py
handlers/: start.py
models/: admin.py
utils/: createadmin.py  db.py  webhook.py
