[project]
name = "user-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "Javohir",email = "qobiljonsharipov33@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "aiogram (>=3.25.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "tortoise-orm (>=1.1.2,<2.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
